--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material": "^5.15.5",
     "@mui/material-nextjs": "^5.15.5",
     "@supabase/supabase-js": "^2.39.3",
+    "@types/uuid": "^9.0.8",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
