--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -18,6 +19,7 @@
     "@mui/material-nextjs": "^5.15.5",
     "@supabase/supabase-js": "^2.39.3",
     "@types/uuid": "^9.0.8",
+    "dotenv": "^16.4.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -26,14 +28,18 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "jsdom": "^24.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.2.2"
   }
 }
